# Tema-2-POO-Pizzerie

./: CMakeLists.txt  main.cpp
headerz/: Angajat.h  AngajatExceptie.h  Bauturi.h  Bucatar.h  Desert.h  Local.h  Meniu.h  Paste.h  Pizza.h  Preparat.h  PreparatExceptie.h  Review.h  TrattoriaExceptie.h
src/: Angajat.cpp  Bauturi.cpp  Bucatar.cpp  Desert.cpp  Local.cpp  Meniu.cpp  Paste.cpp  Pizza.cpp  Preparat.cpp  Review.cpp
